--- a/app/src/main/res/layout/activity_car_details.xml
+++ b/app/src/main/res/layout/activity_car_details.xml
@@ -337,6 +337,44 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="40dp"
+                    android:paddingRight="40dp"
+                    android:paddingBottom="20dp"
+                    android:paddingTop="20dp"
+                    android:background="@drawable/bottom_border"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="DISTANCE PER DAY"
+                        android:fontFamily="@font/poppins_regular"
+                        android:textSize="14dp"
+                        android:textColor="@color/dark_blue1"
+                        android:textStyle="bold"/>
+
+                    <TextView
+                        android:id="@+id/tvcdInsurance"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="15dp"
+                        android:textSize="20dp"
+                        android:fontFamily="@font/poppins_regular"
+                        android:textColor="@color/dark_blue1"
+                        android:text="Mileage"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textColor="@color/dark_blue1"
+                        android:fontFamily="@font/poppins_regular"
+                        android:text="Php 100 will be charged for each additional mile"/>
+
+                </LinearLayout>
+
+                <LinearLayout
                     android:id="@+id/llDescription"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -409,6 +447,7 @@
 
                         </androidx.cardview.widget.CardView>
 
+
                         <TextView
                             android:id="@+id/tvHost"
                             android:layout_width="match_parent"
@@ -423,6 +462,34 @@
 
 
                     </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Contact Number: "
+                            android:textStyle="bold"
+                            android:textColor="@color/dark_blue"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginLeft="40dp"/>
+
+                        <TextView
+                            android:id="@+id/tvContact"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Number"
+                            android:textStyle="bold"
+                            android:textColor="@color/dark_blue"
+                            android:layout_marginTop="10dp"/>
+
+                    </LinearLayout>
+
+
+
                 </LinearLayout>
 
                 <LinearLayout
